# guthrie

./: CMakeLists.txt  README.md  buf.gen.yaml
client_lib/: CMakeLists.txt  guthrie.c  guthrie.h  packets.pb-c.c  packets.pb-c.h
demo_client/: CMakeLists.txt  main.c
proto/: packets.proto
proto/cpp/: packets.pb.cc  packets.pb.h
proto/cpp/buf/validate/: validate.pb.cc  validate.pb.h
src/: CMakeLists.txt  guthrie.service  main.cpp  packets.proto  pubsub.h
