cmake_minimum_required(VERSION 3.31)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(Guthrie)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
  option(BUILD_LIBRARY "Build the library" On)
  option(BUILD_SERVER "Build the server" Off)
  option(BUILD_DEMO "Build the demo" Off)

  if(${BUILD_SERVER})
    add_subdirectory(src)
  endif()
  if(${BUILD_LIBRARY})
    add_subdirectory(client_lib)
  endif()
  if(${BUILD_DEMO})
    add_subdirectory(demo_client)
  endif()
else()
  add_subdirectory(client_lib)
endif()
